[gd_scene load_steps=21 format=2]

[ext_resource path="res://Nodes/PJMenu/UIMenu.gd" type="Script" id=1]
[ext_resource path="res://Nodes/PJMenu/MenuP.gd" type="Script" id=2]
[ext_resource path="res://sprites/uimenu/equip.png" type="Texture" id=3]
[ext_resource path="res://sprites/uimenu/attack.png" type="Texture" id=4]
[ext_resource path="res://sprites/uimenu/uses.png" type="Texture" id=5]
[ext_resource path="res://sprites/uimenu/spells.png" type="Texture" id=6]
[ext_resource path="res://sprites/uimenu/selector.png" type="Texture" id=7]
[ext_resource path="res://sprites/uimenu/item_attributos.png" type="Texture" id=8]
[ext_resource path="res://sprites/uimenu/Cabin-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://sprites/uimenu/selectorItems.png" type="Texture" id=10]
[ext_resource path="res://Nodes/PJMenu/MenuEq.gd" type="Script" id=11]
[ext_resource path="res://sprites/uimenu/item_140x40.png" type="Texture" id=12]
[ext_resource path="res://sprites/items.png" type="Texture" id=13]
[ext_resource path="res://Nodes/PJMenu/MenuUs.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 21
outline_size = 2
outline_color = Color( 0.176471, 0.152941, 0.152941, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 2
outline_color = Color( 0.262745, 0.207843, 0.207843, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0.176471, 0.152941, 0.152941, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0.607843, 0.0392157, 0.0392157, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 17
font_data = ExtResource( 9 )

[node name="RootMenu" type="Node2D"]
z_index = 5
script = ExtResource( 1 )

[node name="MenuP" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="BUTTONS" type="GridContainer" parent="MenuP"]
margin_left = -101.097
margin_top = -46.427
margin_right = 102.903
margin_bottom = -1.427
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 7

[node name="BTN_ATTR" type="Button" parent="MenuP/BUTTONS"]
margin_right = 51.0
margin_bottom = 45.0
icon = ExtResource( 3 )

[node name="BTN_EQ" type="Button" parent="MenuP/BUTTONS"]
margin_left = 51.0
margin_right = 102.0
margin_bottom = 45.0
icon = ExtResource( 4 )

[node name="BTN_US" type="Button" parent="MenuP/BUTTONS"]
margin_left = 102.0
margin_right = 153.0
margin_bottom = 45.0
icon = ExtResource( 5 )

[node name="BTN_SPL" type="Button" parent="MenuP/BUTTONS"]
margin_left = 153.0
margin_right = 204.0
margin_bottom = 45.0
icon = ExtResource( 6 )

[node name="SELECTOR" type="TextureRect" parent="MenuP"]
margin_left = -101.903
margin_top = -47.4289
margin_right = -50.9029
margin_bottom = -2.42886
texture = ExtResource( 7 )
stretch_mode = 6

[node name="MenuAttr" type="Control" parent="."]
editor/display_folded = true
margin_left = -79.0892
margin_top = -38.8549
margin_right = 77.9108
margin_bottom = 192.145
script = ExtResource( 2 )

[node name="BUTTONS" type="GridContainer" parent="MenuAttr"]
margin_left = -7.12405
margin_top = -8.61012
margin_right = 164.876
margin_bottom = 323.39
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="ITEM1" type="Button" parent="MenuAttr/BUTTONS"]
editor/display_folded = true
margin_right = 172.0
margin_bottom = 31.0
icon = ExtResource( 8 )

[node name="name" type="Label" parent="MenuAttr/BUTTONS/ITEM1"]
anchor_right = 1.0
margin_left = 11.2937
margin_top = 4.0
margin_right = -28.7063
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "ataque mele"

[node name="val" type="Label" parent="MenuAttr/BUTTONS/ITEM1"]
margin_left = 134.0
margin_top = 2.0
margin_right = 171.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "27"
align = 1

[node name="ITEM2" type="Button" parent="MenuAttr/BUTTONS"]
editor/display_folded = true
margin_top = 31.0
margin_right = 172.0
margin_bottom = 62.0
icon = ExtResource( 8 )

[node name="name" type="Label" parent="MenuAttr/BUTTONS/ITEM2"]
anchor_right = 1.0
margin_left = 11.2937
margin_top = 4.0
margin_right = -28.7063
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "ataque mele"

[node name="val" type="Label" parent="MenuAttr/BUTTONS/ITEM2"]
margin_left = 134.0
margin_top = 2.0
margin_right = 171.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "27"
align = 1

[node name="ITEM3" type="Button" parent="MenuAttr/BUTTONS"]
editor/display_folded = true
margin_top = 62.0
margin_right = 172.0
margin_bottom = 93.0
icon = ExtResource( 8 )

[node name="name" type="Label" parent="MenuAttr/BUTTONS/ITEM3"]
anchor_right = 1.0
margin_left = 11.2937
margin_top = 4.0
margin_right = -28.7063
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "ataque mele"

[node name="val" type="Label" parent="MenuAttr/BUTTONS/ITEM3"]
margin_left = 134.0
margin_top = 2.0
margin_right = 171.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "27"
align = 1

[node name="ITEM4" type="Button" parent="MenuAttr/BUTTONS"]
editor/display_folded = true
margin_top = 93.0
margin_right = 172.0
margin_bottom = 124.0
icon = ExtResource( 8 )

[node name="name" type="Label" parent="MenuAttr/BUTTONS/ITEM4"]
anchor_right = 1.0
margin_left = 11.2937
margin_top = 4.0
margin_right = -28.7063
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "ataque mele"

[node name="val" type="Label" parent="MenuAttr/BUTTONS/ITEM4"]
margin_left = 134.0
margin_top = 2.0
margin_right = 171.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "27"
align = 1

[node name="ITEM5" type="Button" parent="MenuAttr/BUTTONS"]
editor/display_folded = true
margin_top = 124.0
margin_right = 172.0
margin_bottom = 155.0
icon = ExtResource( 8 )

[node name="name" type="Label" parent="MenuAttr/BUTTONS/ITEM5"]
anchor_right = 1.0
margin_left = 11.2937
margin_top = 4.0
margin_right = -28.7063
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "ataque mele"

[node name="val" type="Label" parent="MenuAttr/BUTTONS/ITEM5"]
margin_left = 134.0
margin_top = 2.0
margin_right = 171.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "27"
align = 1

[node name="ITEM6" type="Button" parent="MenuAttr/BUTTONS"]
editor/display_folded = true
margin_top = 155.0
margin_right = 172.0
margin_bottom = 186.0
icon = ExtResource( 8 )

[node name="name" type="Label" parent="MenuAttr/BUTTONS/ITEM6"]
anchor_right = 1.0
margin_left = 11.2937
margin_top = 4.0
margin_right = -28.7063
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "ataque mele"

[node name="val" type="Label" parent="MenuAttr/BUTTONS/ITEM6"]
margin_left = 134.0
margin_top = 2.0
margin_right = 171.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "27"
align = 1

[node name="SELECTOR" type="TextureRect" parent="MenuAttr"]
margin_left = -5.37725
margin_top = -59.8883
margin_right = 339.623
margin_bottom = 4.11173
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )
stretch_mode = 1

[node name="attr" type="Label" parent="MenuAttr"]
margin_left = 168.371
margin_top = -6.789
margin_right = 207.371
margin_bottom = 21.211
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "atk"

[node name="counter" type="Label" parent="MenuAttr"]
margin_left = 167.954
margin_top = -29.3532
margin_right = 211.954
margin_bottom = -5.3532
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1 / 16"
align = 1

[node name="title" type="Label" parent="MenuAttr"]
margin_left = -11.243
margin_top = -31.5367
margin_right = 171.757
margin_bottom = -6.53671
custom_fonts/font = SubResource( 5 )
text = "CARACTERISTICAS"
align = 1
valign = 1

[node name="MenuEq" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_left = -79.0892
margin_top = -38.8549
margin_right = 77.9108
margin_bottom = 192.145
script = ExtResource( 11 )

[node name="BUTTONS" type="GridContainer" parent="MenuEq"]
margin_left = -15.0
margin_top = -7.0
margin_right = 177.0
margin_bottom = 323.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="ITEM1" type="Button" parent="MenuEq/BUTTONS"]
editor/display_folded = true
margin_right = 192.0
margin_bottom = 46.0
icon = ExtResource( 12 )

[node name="icon" type="Sprite" parent="MenuEq/BUTTONS/ITEM1"]
position = Vector2( 25, 23 )
texture = ExtResource( 13 )
vframes = 3
hframes = 6

[node name="name" type="Label" parent="MenuEq/BUTTONS/ITEM1"]
anchor_right = 1.0
margin_left = 51.0
margin_right = 27.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Nombre"

[node name="desc" type="Label" parent="MenuEq/BUTTONS/ITEM1"]
margin_left = 46.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "descripcion"
align = 2

[node name="eq" type="Label" parent="MenuEq/BUTTONS/ITEM1"]
margin_left = -6.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "EQ"
align = 2

[node name="ITEM2" type="Button" parent="MenuEq/BUTTONS"]
editor/display_folded = true
margin_top = 46.0
margin_right = 192.0
margin_bottom = 92.0
icon = ExtResource( 12 )

[node name="icon" type="Sprite" parent="MenuEq/BUTTONS/ITEM2"]
position = Vector2( 25, 23 )
texture = ExtResource( 13 )
vframes = 3
hframes = 6

[node name="name" type="Label" parent="MenuEq/BUTTONS/ITEM2"]
anchor_right = 1.0
margin_left = 51.0
margin_right = 27.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Nombre"

[node name="desc" type="Label" parent="MenuEq/BUTTONS/ITEM2"]
margin_left = 46.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "descripcion"
align = 2

[node name="eq" type="Label" parent="MenuEq/BUTTONS/ITEM2"]
margin_left = -6.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "EQ"
align = 2

[node name="ITEM3" type="Button" parent="MenuEq/BUTTONS"]
editor/display_folded = true
margin_top = 92.0
margin_right = 192.0
margin_bottom = 138.0
icon = ExtResource( 12 )

[node name="icon" type="Sprite" parent="MenuEq/BUTTONS/ITEM3"]
position = Vector2( 25, 23 )
texture = ExtResource( 13 )
vframes = 3
hframes = 6

[node name="name" type="Label" parent="MenuEq/BUTTONS/ITEM3"]
anchor_right = 1.0
margin_left = 51.0
margin_right = 27.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Nombre"

[node name="desc" type="Label" parent="MenuEq/BUTTONS/ITEM3"]
margin_left = 46.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "descripcion"
align = 2

[node name="eq" type="Label" parent="MenuEq/BUTTONS/ITEM3"]
margin_left = -6.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "EQ"
align = 2

[node name="ITEM4" type="Button" parent="MenuEq/BUTTONS"]
editor/display_folded = true
margin_top = 138.0
margin_right = 192.0
margin_bottom = 184.0
icon = ExtResource( 12 )

[node name="icon" type="Sprite" parent="MenuEq/BUTTONS/ITEM4"]
position = Vector2( 25, 23 )
texture = ExtResource( 13 )
vframes = 3
hframes = 6

[node name="name" type="Label" parent="MenuEq/BUTTONS/ITEM4"]
anchor_right = 1.0
margin_left = 51.0
margin_right = 27.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Nombre"

[node name="desc" type="Label" parent="MenuEq/BUTTONS/ITEM4"]
margin_left = 46.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "descripcion"
align = 2

[node name="eq" type="Label" parent="MenuEq/BUTTONS/ITEM4"]
margin_left = -6.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "EQ"
align = 2

[node name="SELECTOR" type="TextureRect" parent="MenuEq"]
margin_left = -14.0
margin_top = -41.0
margin_right = 177.0
margin_bottom = 5.0
texture = ExtResource( 10 )
stretch_mode = 1

[node name="counter" type="Label" parent="MenuEq"]
margin_left = 189.61
margin_top = -7.7388
margin_right = 233.61
margin_bottom = 16.2612
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1 / 16"
align = 1

[node name="title" type="Label" parent="MenuEq"]
margin_left = -8.0
margin_top = -32.0
margin_right = 175.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 5 )
text = "EQUIPAMIENTO"
align = 1
valign = 1

[node name="MenuUs" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_left = -79.0892
margin_top = -38.8549
margin_right = 77.9108
margin_bottom = 192.145
script = ExtResource( 14 )

[node name="BUTTONS" type="GridContainer" parent="MenuUs"]
margin_left = -15.0
margin_top = -7.0
margin_right = 177.0
margin_bottom = 323.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="ITEM1" type="Button" parent="MenuUs/BUTTONS"]
editor/display_folded = true
margin_right = 192.0
margin_bottom = 46.0
icon = ExtResource( 12 )

[node name="icon" type="Sprite" parent="MenuUs/BUTTONS/ITEM1"]
position = Vector2( 25, 23 )
texture = ExtResource( 13 )
vframes = 3
hframes = 6

[node name="name" type="Label" parent="MenuUs/BUTTONS/ITEM1"]
anchor_right = 1.0
margin_left = 51.0
margin_right = 27.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Nombre"

[node name="desc" type="Label" parent="MenuUs/BUTTONS/ITEM1"]
margin_left = 46.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "descripcion"
align = 2

[node name="cnt" type="Label" parent="MenuUs/BUTTONS/ITEM1"]
margin_left = 6.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x1"
align = 2

[node name="ITEM2" type="Button" parent="MenuUs/BUTTONS"]
editor/display_folded = true
margin_top = 46.0
margin_right = 192.0
margin_bottom = 92.0
icon = ExtResource( 12 )

[node name="icon" type="Sprite" parent="MenuUs/BUTTONS/ITEM2"]
position = Vector2( 25, 23 )
texture = ExtResource( 13 )
vframes = 3
hframes = 6

[node name="name" type="Label" parent="MenuUs/BUTTONS/ITEM2"]
anchor_right = 1.0
margin_left = 51.0
margin_right = 27.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Nombre"

[node name="desc" type="Label" parent="MenuUs/BUTTONS/ITEM2"]
margin_left = 46.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "descripcion"
align = 2

[node name="cnt" type="Label" parent="MenuUs/BUTTONS/ITEM2"]
margin_left = 6.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x1"
align = 2

[node name="ITEM3" type="Button" parent="MenuUs/BUTTONS"]
editor/display_folded = true
margin_top = 92.0
margin_right = 192.0
margin_bottom = 138.0
icon = ExtResource( 12 )

[node name="icon" type="Sprite" parent="MenuUs/BUTTONS/ITEM3"]
position = Vector2( 25, 23 )
texture = ExtResource( 13 )
vframes = 3
hframes = 6

[node name="name" type="Label" parent="MenuUs/BUTTONS/ITEM3"]
anchor_right = 1.0
margin_left = 51.0
margin_right = 27.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Nombre"

[node name="desc" type="Label" parent="MenuUs/BUTTONS/ITEM3"]
margin_left = 46.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "descripcion"
align = 2

[node name="cnt" type="Label" parent="MenuUs/BUTTONS/ITEM3"]
margin_left = 6.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x1"
align = 2

[node name="ITEM4" type="Button" parent="MenuUs/BUTTONS"]
editor/display_folded = true
margin_top = 138.0
margin_right = 192.0
margin_bottom = 184.0
icon = ExtResource( 12 )

[node name="icon" type="Sprite" parent="MenuUs/BUTTONS/ITEM4"]
position = Vector2( 25, 23 )
texture = ExtResource( 13 )
vframes = 3
hframes = 6

[node name="name" type="Label" parent="MenuUs/BUTTONS/ITEM4"]
anchor_right = 1.0
margin_left = 51.0
margin_right = 27.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.192157, 0.192157, 1 )
text = "Nombre"

[node name="desc" type="Label" parent="MenuUs/BUTTONS/ITEM4"]
margin_left = 46.0
margin_top = 22.0
margin_right = 184.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.333333, 0.333333, 0.333333, 1 )
text = "descripcion"
align = 2

[node name="cnt" type="Label" parent="MenuUs/BUTTONS/ITEM4"]
margin_left = 6.0
margin_top = 26.0
margin_right = 44.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "x1"
align = 2

[node name="SELECTOR" type="TextureRect" parent="MenuUs"]
margin_left = -14.0
margin_top = -41.0
margin_right = 177.0
margin_bottom = 5.0
texture = ExtResource( 10 )
stretch_mode = 1

[node name="counter" type="Label" parent="MenuUs"]
margin_left = 189.61
margin_top = -7.7388
margin_right = 233.61
margin_bottom = 16.2612
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1 / 16"
align = 1

[node name="title" type="Label" parent="MenuUs"]
margin_left = -8.0
margin_top = -32.0
margin_right = 175.0
margin_bottom = -7.0
custom_fonts/font = SubResource( 5 )
text = "CONSUMIBLES
"
align = 1
valign = 1
